# kaggle-credit-risk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_feature_engineering_lr.yml  parameters_skorecard_modeling.yml  parameters_xgboost_modeling.yml
docs/source/: conf.py  index.rst
src/kedro_credit_risk/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/kedro_credit_risk/pipelines/data_processing/: __init__.py  aggregations.py  correlation.py  nodes.py  pipeline.py
src/kedro_credit_risk/pipelines/feature_engineering_lr/: __init__.py  correlation.py  nodes.py  pipeline.py
src/kedro_credit_risk/pipelines/skorecard_modeling/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/feature_engineering/: test_pipeline.py
src/tests/pipelines/feature_engineering_lr/: test_pipeline.py
src/tests/pipelines/skorecard_modeling/: test_pipeline.py
tests/: test_run.py
tools/: convert_to_parquet.py
