[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kedro_credit_risk"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
kedro-credit-risk = "kedro_credit_risk.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.poetry]
name = "kedro_credit_risk"
version = "0.1.0"  # Adjust your version here
description = "Credit Risk Model with Kedro"
authors = ["Stanislaw Cronberg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
kedro = "~0.19.1"
scikit-learn = ">=1.3.0"
seaborn = "~0.12.1"
pyarrow = "~14.0.2"
tqdm = "~4.62.3"
skorecard = "~1.6.8"
jupyterlab = ">=3.0"
kedro-viz = "^7.0.0"
kedro-datasets = "^2.0.0"
optuna = "^3.5.0"

[tool.poetry.extras]
docs = ["docutils", "sphinx", "sphinx_rtd_theme", "nbsphinx", "sphinx-autodoc-typehints", "sphinx_copybutton", "ipykernel", "Jinja2", "myst-parser"]

[tool.poetry.dev-dependencies]
black = ">=22.0"
ipython = ">=8.10"
pytest = "~7.2"
pytest-cov = "~3.0"
pytest-mock = ">=1.7.1,<2.0"
ruff = "~0.0.290"
pre-commit = "*"

[tool.poetry.scripts]
kedro-credit-risk = "kedro_credit_risk.__main__:main"

[tool.kedro]
package_name = "kedro_credit_risk"
project_name = "kedro-credit-risk"
kedro_init_version = "0.19.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_credit_risk -ra"""

[tool.ruff]
line-length = 120
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Black takes care of line-too-long
